Add basic navigation support and make SensorActivity a fragment.

--- a/app/src/main/res/layout/content_sensors.xml
+++ b/app/src/main/res/layout/content_sensors.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_sensors"
-    tools:context=".SensorsActivity">
+    tools:showIn="@layout/fragment_sensors"
+    tools:context=".SensorsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/sensors_recycler_view"
