--- a/app/src/main/res/layout/item_sensor.xml
+++ b/app/src/main/res/layout/item_sensor.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="item" type="com.u31.openbikecomputer.SensorsActivity.Item" />
+        <variable name="item" type="com.u31.openbikecomputer.SensorsFragment.Item" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
