--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/SensorsFragment">
+    app:startDestination="@id/sensors_fragment">
     <fragment
-        android:id="@+id/SensorsFragment"
+        android:id="@+id/sensors_fragment"
         android:name="com.u31.openbikecomputer.SensorsFragment"
         android:label="content_sensors"
         tools:layout="@layout/content_sensors" />
