--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/action_run"
+    <item android:id="@+id/dashboard_fragment"
         android:title="@string/menu_run"
         android:icon="@drawable/ic_directions_bike_black_24dp" />
 
